# RustCourseBackend

./: .gitignore  Cargo.toml
migrations/2023-02-16-160418_create_posts/: up.sql
src/: main.rs  models.rs
src/services/: post.rs
templates/: blog.html  create.html  index.html  update.html
