[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
actix-web = "^4"
serde = { verison = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
json = "0.12.4"
tera = "1.17.1"
